Fixed various code analysis issues reported by IDEA