@@ -1,5 +1,15 @@
 package org.sejda.sambox.pdmodel.interactive.form;
 
+import static org.hamcrest.CoreMatchers.containsString;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.fail;
+
+import java.io.IOException;
+import java.io.InputStream;
+import java.util.Arrays;
+import java.util.List;
+
 import org.junit.Before;
 import org.junit.Test;
 import org.sejda.sambox.cos.COSArray;
@@ -11,15 +21,6 @@ import org.sejda.sambox.pdmodel.common.PDRectangle;
 import org.sejda.sambox.pdmodel.font.PDFont;
 import org.sejda.sambox.pdmodel.font.PDType0Font;
 import org.sejda.sambox.pdmodel.interactive.annotation.PDAnnotationWidget;
-
-import java.io.IOException;
-import java.io.InputStream;
-import java.util.Arrays;
-
-import static org.hamcrest.CoreMatchers.containsString;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.fail;
 
 public class PDListBoxTest
 {
@@ -44,7 +45,7 @@ public class PDListBoxTest
         widget.setRectangle(new PDRectangle(0, 0, 100, 100));
 
         listBox.addWidgetIfMissing(widget);
-        listBox.setOptions(Arrays.asList("Diacritiçésţșâă"));
+        listBox.setOptions(List.of("Diacritiçésţșâă"));
 
         try
         {
@@ -85,6 +86,6 @@ public class PDListBoxTest
         assertEquals(Arrays.asList("Option\t1", "Option\t2"), choiceField.getOptions());
 
         choiceField.setValue("Option\t1");
-        assertEquals(choiceField.getValue(), Arrays.asList("Option\t1"));
+        assertEquals(choiceField.getValue(), List.of("Option\t1"));
     }
 }
